--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ python_variable_annotations/0-main.py
 python_variable_annotations/__pycache__/0-add.cpython-310.pyc
 python_variable_annotations/__pycache__/1-concat.cpython-310.pyc
 python_variable_annotations/1-main.py
+python_variable_annotations/__pycache__/2-floor.cpython-310.pyc
+python_variable_annotations/2-main.py
