--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ python_variable_annotations/__pycache__/1-concat.cpython-310.pyc
 python_variable_annotations/1-main.py
 python_variable_annotations/__pycache__/2-floor.cpython-310.pyc
 python_variable_annotations/2-main.py
+python_variable_annotations/__pycache__/3-to_str.cpython-310.pyc
+python_variable_annotations/3-main.py
