--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@ python_variable_annotations/__pycache__/2-floor.cpython-310.pyc
 python_variable_annotations/2-main.py
 python_variable_annotations/__pycache__/3-to_str.cpython-310.pyc
 python_variable_annotations/3-main.py
+python_variable_annotations/__pycache__/4-define_variables.cpython-310.pyc
+python_variable_annotations/4-main.py
