--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ python_variable_annotations/__pycache__/3-to_str.cpython-310.pyc
 python_variable_annotations/3-main.py
 python_variable_annotations/__pycache__/4-define_variables.cpython-310.pyc
 python_variable_annotations/4-main.py
+python_variable_annotations/__pycache__/5-sum_list.cpython-310.pyc
+python_variable_annotations/5-main.py
