task 6 sum mixed list

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ python_variable_annotations/__pycache__/4-define_variables.cpython-310.pyc
 python_variable_annotations/4-main.py
 python_variable_annotations/__pycache__/5-sum_list.cpython-310.pyc
 python_variable_annotations/5-main.py
+python_variable_annotations/6-main.py
+python_variable_annotations/__pycache__/6-sum_mixed_list.cpython-310.pyc
