--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ python_variable_annotations/__pycache__/5-sum_list.cpython-310.pyc
 python_variable_annotations/5-main.py
 python_variable_annotations/6-main.py
 python_variable_annotations/__pycache__/6-sum_mixed_list.cpython-310.pyc
+python_variable_annotations/__pycache__/7-to_kv.cpython-310.pyc
+python_variable_annotations/7-main.py
