--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ python_variable_annotations/6-main.py
 python_variable_annotations/__pycache__/6-sum_mixed_list.cpython-310.pyc
 python_variable_annotations/__pycache__/7-to_kv.cpython-310.pyc
 python_variable_annotations/7-main.py
+python_variable_annotations/8-main.py
+python_variable_annotations/__pycache__/8-make_multiplier.cpython-310.pyc
