--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@ python_variable_annotations/__pycache__/7-to_kv.cpython-310.pyc
 python_variable_annotations/7-main.py
 python_variable_annotations/8-main.py
 python_variable_annotations/__pycache__/8-make_multiplier.cpython-310.pyc
+python_variable_annotations/__pycache__/9-element_length.cpython-310.pyc
+python_variable_annotations/9-main.py
