--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ python_async_comprehension/0-main.py
 python_async_comprehension/__pycache__/0-async_generator.cpython-310.pyc
 python_async_comprehension/1-main.py
 python_async_comprehension/__pycache__/1-async_comprehension.cpython-310.pyc
+python_async_comprehension/2-main.py
+python_async_comprehension/__pycache__/2-measure_runtime.cpython-310.pyc
