--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ python_async_comprehension/__pycache__/1-async_comprehension.cpython-310.pyc
 python_async_comprehension/2-main.py
 python_async_comprehension/__pycache__/2-measure_runtime.cpython-310.pyc
 pagination/Popular_Baby_Names.csv
+pagination/__pycache__/0-simple_helper_function.cpython-310.pyc
+pagination/0-main.py
