--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ python_async_comprehension/__pycache__/2-measure_runtime.cpython-310.pyc
 pagination/Popular_Baby_Names.csv
 pagination/__pycache__/0-simple_helper_function.cpython-310.pyc
 pagination/0-main.py
+pagination/__pycache__/1-simple_pagination.cpython-310.pyc
+pagination/1-main.py
