--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ pagination/__pycache__/0-simple_helper_function.cpython-310.pyc
 pagination/0-main.py
 pagination/__pycache__/1-simple_pagination.cpython-310.pyc
 pagination/1-main.py
+pagination/__pycache__/2-hypermedia_pagination.cpython-310.pyc
+pagination/2-main.py
