--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@ ES6_promise/0-main.js
 ES6_promise/1-main.js
 ES6_promise/2-main.js
 ES6_promise/3-main.js
+ES6_promise/.editorconfig
+ES6_promise/.editorconfig
+ES6_promise/4-main.js
