--- a/.gitignore
+++ b/.gitignore
@@ -105,3 +105,4 @@ ES6_data_manipulation/0-main.js
 package-lock.json
 package.json
 ES6_data_manipulation/.eslintrc.js
+ES6_data_manipulation/1-main.js
