--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ package.json
 ES6_data_manipulation/.eslintrc.js
 ES6_data_manipulation/1-main.js
 ES6_data_manipulation/2-main.js
+ES6_data_manipulation/3-main.js
