--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ ES6_data_manipulation/.eslintrc.js
 ES6_data_manipulation/1-main.js
 ES6_data_manipulation/2-main.js
 ES6_data_manipulation/3-main.js
+ES6_data_manipulation/4-main.js
