--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,8 @@ ES6_data_manipulation/2-main.js
 ES6_data_manipulation/3-main.js
 ES6_data_manipulation/4-main.js
 ES6_data_manipulation/5-main.js
+ES6_data_manipulation/6-main.js
+ES6_data_manipulation/7-main.js
+ES6_data_manipulation/8-main.js
+ES6_data_manipulation/9-main.js
+ES6_data_manipulation/10-main.js
