chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,4 @@ ES6_data_manipulation/7-main.js
 ES6_data_manipulation/8-main.js
 ES6_data_manipulation/9-main.js
 ES6_data_manipulation/10-main.js
+base_caching.py
