--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,5 @@ ES6_data_manipulation/8-main.js
 ES6_data_manipulation/9-main.js
 ES6_data_manipulation/10-main.js
 base_caching.py
+0-main.py
+*.pyc
